2007-11-25	Frank Richter	<frank.richter@gmail.com>

* Added a wrapper object to allow access to Gecko memory allocation without
  having to necessarily link against XPCOM.

2007-11-25	Frank Richter	<frank.richter@gmail.com>

* Added a "string" object, used when strings are returned from OffscreenGecko.

2007-11-25	Frank Richter	<frank.richter@gmail.com>

* Fixed a cut'n'paste error in OSGK::Impl::Ref<> causing AttachNew() to do
  the opposite of what it was supposed to do (not adding a ref).

2007-11-25	Frank Richter	<frank.richter@gmail.com>

* Added ability to specify additional XPCOM components paths.

2007-11-24	Frank Richter	<frank.richter@gmail.com>

* Switched VC runtime library to static version.

2007-11-23	Frank Richter	<frank.richter@gmail.com>

* Added support for specifying paths to search for XULrunner.

2007-11-23	Frank Richter	<frank.richter@gmail.com>

* Fix for building against XULrunner SDK 1.9b2pre.

2007-11-23	Frank Richter	<frank.richter@gmail.com>

* When generating VC projects, provide fallback XULrunner SDK location in the
  source tree (to which the SDK would be extracted to).

2007-11-23	Frank Richter	<frank.richter@gmail.com>

* Replaced use of NS_InitEmbedding/NS_TermEmbedding with
  XRE_InitEmbedding/XRE_TermEmbedding.

2007-11-23	Frank Richter	<frank.richter@gmail.com>

* Avoid allocating a gfxContext in local code since it'll be freed by libxul,
  potentially causing a memory allocation module mismatch.

2007-11-23	Frank Richter	<frank.richter@gmail.com>

* Fixes for building against FF3b1 version of Gecko.
  
2007-11-23	Frank Richter	<frank.richter@gmail.com>

* Fixed nsBaseWidget to compile with "embedded" string API in debug builds.
  
2007-11-23	Frank Richter	<frank.richter@gmail.com>

* Added CMake files. Switched manually maintained VC project file to a
  generated one.
  
2007-11-22	Frank Richter	<frank.richter@gmail.com>

* Everything: 
  Initial checkin. Rendering, mouse events, keyboard events.